updated copy on all pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ELGM: About</title>
+		<title>Graceful Transitioning: About</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>End of Life Guides Marquette</strong></a>
+						<a href="index.html" class="logo"><strong>Graceful Transitioning</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -42,12 +42,20 @@
 							<h1>Who We Are</h1>
 							<p>"There are no quick fixes to grief. No easy answers. Every expression of grief that wants to be felt and honored and given its space, must be allowed... in order to heal." -Tom Zuba</p>
 						</header>
-						<span class="image main filtered"><img src="images/becca-tapert-8_wjL7l5tik-unsplash-cropped.webp" alt="" /></span>
-						<p>Jennifer Aldrich-Boyle and Kathy Anthony, two friends trained as Death Doulas to support those dying and their families in the Marquette area. They aim to change the stigma attached to talking about dying.
-						</p>
-						<p>Many times we live our lives without really being present and we miss the everyday beautiful moments, or we miss really connecting with others, or even connecting with ourselves. We often don’t talk about what we want the end of our life to look like with our loved ones, so our loved ones end up with regrets about what they did or didn’t do, or the dying person doesn’t die in the manner they wished to.</p>
-						<p>Unfortunately, there are often conflicts within the family because the family doesn’t know what their dying loved ones' wishes are, or family members don’t agree on what should happen if their loved one didn’t leave instructions. </p>
-						<p>These are things we can change and work on by talking openly about death so that we don’t have such difficulties at the end of life when it would be ideal if everything were peaceful.</p>
+						<span class="image main filtered"><img src="images/becca-tapert-8_wjL7l5tik-unsplash-cropped.webp" alt=""/></span>
+
+						<h3>What is a Death Doula?</h3>
+						<p>A death doula offers compassionate, non-medical support to individuals nearing the end of life and their loved ones. Their role is to bring comfort, clarity, and meaning to the dying process by easing fears, answering questions, and providing emotional and spiritual guidance. By being a steady presence, they help individuals and families navigate this transition with greater peace.</p>
+
+						<p>Death doulas work alongside hospice and medical teams, offering personalized care that focuses on emotional well-being. They provide bedside support, advocate for pain management, facilitate conversations among loved ones, and help with self-care. They also assist with legacy projects, such as writing letters or recording memories, to honor a person’s life and values.</p>
+
+						<p>Beyond emotional support, death doulas help individuals plan for their final days in a way that aligns with their wishes. They create comforting vigil plans, help organize memorials, and support families through grief. Their presence ensures that the dying process is as peaceful and meaningful as possible.</p>
+
+						<p>For those considering Voluntarily Stopping Eating and Drinking (VSED) as a way to control the timing of their passing, death doulas provide guidance and advocacy. They educate individuals and families about the process, coordinate with healthcare teams, and offer emotional and practical support, ensuring choices are honored with dignity and care.</p>
+
+						<p>Ultimately, death doulas help demystify dying and make the process more intentional and peaceful. Through compassionate presence and thoughtful guidance, they provide comfort, reassurance, and a sense of control in life’s final chapter.</p>
+
+
 						<p class="quotation"><strong>“Death is not the opposite of life but a part of it” -Haruki Murakami</strong>
 						</p>
 
@@ -68,42 +76,17 @@
 							</ul>
 						</section>
 
-						<h3>Jennifer Aldrich-Boyle</h3>
-						<p><span class="image right"><img src="images/jennifer-aldrich-headshot.webp" alt="headshot of Jennifer Aldrich smiling in front of a stone wall" /></span><i class="">How would you live your life differently if you were just given a diagnosis that gave you a week, month, or year to live?</i></p>
-						<p>I help guide people to find their space and peace within, while being present and accepting of whatever comes up.
-						</p>
-						<p>We all touch lives and have our lives touched in some ways while here on Earth, both positively and negatively. While most of us want to leave this earthly realm in peace and without regrets, many of us may not know how to achieve this. Would you be surprised to know that we all have the answers within, we just have to learn how to listen? 
-						</p>
-						<p>I offer compassionate, non-judgmental space, as well as educational, spiritual, and emotional support and advocacy to those in palliative care and hospice, and their families, as they navigate all aspects of the end of their lives. I aim to help all achieve a “good death”, to the extent that one can control this.</p>
-						<p>I have a BS in community health education, an IHAP diploma (integrative healing arts practitioner), a CH (certified hypnotherapist), and have completed death and dying trainings.
-						</p>
-						<p>I offer services as a death doula/end-of-life guide. I offer hypno-coaching, (a combination session utilizing the healing effects of both transpersonal hypnotherapy and coaching together) which can help clients work through stuck emotions and old stories that we tell ourselves, help us break addictions or behaviors that no longer work for us, help us come to a place of peace and acceptance within and to focus on the present moment.  I am ordained and offer inclusive ceremonies and blessings.</p>
-						
-						<section class="special">
-
-							<!-- Note: If you have an odd number of icons, change the class below to "features odd" -->
-							<ul class="features odd badge">
-								<li class="badge">
-									<span class="image badge"><a href="https://nath.world/" target="_blank"><img src="images/badges/national-association-of-transpersonal-hypnotherapists.png" alt="NATH National Association of Transpersonal Hypnotherapists"></a></span>
-								</li>
-								<li class="badge">
-									<span class="image badge"><a href="https://universalbrotherhood.org/" target="_blank"><img src="images/badges/UBM-logo.jpg" alt="Universal Brotherhood Movement logo, which is an interlocking U and B in front of a 7 pointed star"></a></span>
-								</li>
-							</ul>
-						</section>
-
 						<h3>Kathy Anthony</h3>
-						<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
-						<p><span class="image left"><img src="images/brooke-cagle-QZRAaYfmvA8-unsplash-cropped.webp" alt="" /></span>Faucibus volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque. Lorem turpis ipsum dolor sit amet at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante. Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus.</p>
+						<p>Kathy is a compassionate nurse with firsthand experience supporting families through the challenges of end-of-life care. She understands the gap between hospice services and the dying process—while hospice provides medical support, families are often left managing medications and care between visits. Many loved ones fear being alone when death comes, unsure of what to do in those final moments. Kathy offers guidance, reassurance, and a calming presence, bringing light and comfort to families during this deeply personal journey.</p>
+						<p><span class="image left"><img src="images/brooke-cagle-QZRAaYfmvA8-unsplash-cropped.webp" alt="" /></span>Through her Death Doula training, Kathy expands her care beyond medical support, offering emotional, spiritual, and practical guidance tailored to each family’s needs. She helps create personalized vigil plans, provides education on the dying process, and ensures that no one feels alone or unprepared. Her presence brings peace of mind, allowing families to focus on love and connection in their loved one’s final moments.</p>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; End of Life Guides Marquette 2024. | Images by <a href="https://unsplash.com/">Unsplash</a>.</p>
+						<p class="copyright">&copy; Graceful Transitioning 2025 | Developed by <a href="https://www.annairishburnett.com" target="_blank">Anna Irish Burnett</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</footer>
 
