--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ELGM: Contact</title>
+		<title>Graceful Transitioning: Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>End of Life Guides Marquette</strong></a>
+						<a href="index.html" class="logo"><strong>Graceful Transitioning</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,7 +31,6 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="resources.html">Resources</a></li>
-							<li><a href="blog.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -51,7 +50,7 @@
 							<ul class="contact-icons">
 								<li>
 									<span class="icon major alt fa-envelope"></span>
-									<p><a href="mailto:endoflifeguidesmarquette@gmail.com">endoflifeguidesmarquette@gmail.com</a></p>
+									<p><a href="mailto:">gracefultransitioning@gmail.com</a></p>
 								</li>
 								<li>
 									<span class="icon major alt fa-map"></span>
@@ -59,7 +58,7 @@
 								</li>
 								<li>
 									<span class="icon solid major alt fa-mobile-alt"></span>
-									<p><a href="#">(906) 361-0000</a></p>
+									<p><a href="#">(906) 361-2998</a></p>
 								</li>
 							</ul>
 						</section>
@@ -70,11 +69,10 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; End of Life Guides Marquette 2024. | Images by <a href="https://unsplash.com/">Unsplash</a>.</p>
+						<p class="copyright">&copy; Graceful Transitioning 2025 | Developed by <a href="https://www.annairishburnett.com" target="_blank">Anna Irish Burnett</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</footer>
 
