--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ELGM: Resources</title>
+		<title>Graceful Transitioning: Resources</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>End of Life Guides Marquette</strong></a>
+						<a href="index.html" class="logo"><strong>Graceful Transitioning</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,7 +31,6 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="resources.html">Resources</a></li>
-							<li><a href="blog.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -46,10 +45,10 @@
 						<h3>Additional Support</h3>
 						<p>At the end of your life or the life of a loved one, you may want additional support or services outside of what we provide at End of Life Guides Marquette. A healing massage, a beautiful handcrafted urn for your ashes, or an alternative funeral service for when you are gone. While we cannot provide these services ourselves, we can recommend skilled professionals in the Marquette area who specialize in these areas. Below is a list of some of the providers, businesses, and organizations that we regularly work with and recommend to our clients.</p>
 									<dl>
-										<dt>Healing Massage</dt>
+										<dt>Big Lake Body Works</dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-											<p>Learn more on their <a href="#">website</a>.</p>
+											<p>Our therapists offer a variety of massage services to ensure your treatment is therapeutic, relaxing, and tailored to your specific needs.</p>
+											<p>Learn more on their <a href="https://www.sageandspry.com/">website</a>.</p>
 										</dd>
 										<dt>Memorial Urns</dt>
 										<dd>
@@ -91,11 +90,10 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; End of Life Guides Marquette 2024. | Images by <a href="https://unsplash.com/">Unsplash</a>.</p>
+						<p class="copyright">&copy; Graceful Transitioning 2025 | Developed by <a href="https://www.annairishburnett.com" target="_blank">Anna Irish Burnett</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</footer>
 
