--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ELGM: Services</title>
+		<title>Graceful Transitioning: Services</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>End of Life Guides Marquette</strong></a>
+						<a href="index.html" class="logo"><strong>Graceful Transitioning</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,7 +31,6 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="resources.html">Resources</a></li>
-							<li><a href="blog.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -45,19 +44,22 @@
 					<span class="image main filtered"><img src="images/johannes-plenio-qkfxBc2NQ18-unsplash-cropped.webp" alt="" /></span>
 					<h3>Our Offerings</h3>
 					<p>A Death Doula is different from Hospice because the focus is on emotional needs and spiritual support, rather than medical needs. We are advocates for the dying, ready to honor their path, hold space for emotions, and provide compassionate companionship at the end of life.</p>
-					<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
 								<dl>
-									<dt>One</dt>
+									<dt>Graceful Transitioning Consultation</dt>
 									<dd>
-										<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
+										<p>During this consulation, we offer space to discuss your desires, goals, and the path forward for death doula care at the end of your life. Together, we will explore the emotional and spiritual aspects of the dying process, ensuring that your needs and wishes are honored. We will also address any logistical concerns, such as burial options and advanced directives, allowing you and your family to focus on what truly matters—creating a meaningful, peaceful, and compassionate experience. As advocates, we will help guide you and your loved ones through this journey, ensuring that the transition is handled with dignity, understanding, and support.</p>
 									</dd>
-									<dt>Two</dt>
+									<dt>End-of-Life Doula Care</dt>
 									<dd>
-										<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
+										<p>End-of-life doula care provides compassionate, personalized support for those who are dying, ensuring their transition is met with dignity, understanding, and peace. Doulas act as advocates, honoring the individual’s unique journey while helping explore possibilities for a meaningful and peaceful passing. They focus on the emotional and spiritual aspects of the dying process, offering space for reflection and supporting the person in processing their feelings and any spiritual concerns. Doulas also hold space for both the dying person and their family, offering a neutral sounding board for all emotions and providing comfort through healing touch and visualization techniques. They help explore the loved one’s life, creating ceremonies tailored to their needs, and assist in planning Life Celebration gatherings, whether before or after death. When the dying process begins, doulas initiate and oversee the Vigil Plan, ensuring it aligns with the family’s vision. They provide in-person support at the time of death, acting as a point person with hospice and the funeral home, and offer grief support by gathering with the family afterward to reprocess and assist in navigating the mourning process.</p>
 									</dd>
-									<dt>Three</dt>
+									<dt>Family Doula Care</dt>
 									<dd>
-										<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
+										<p>A Death Doula provides compassionate and creative support for families navigating the end-of-life journey alongside their loved one. By holding space for emotions, they help family members process grief, fears, and the spiritual aspects of death in a supportive and understanding way. In addition to emotional care for the family, we offer guidance on burial options, logistics, and what to do when death occurs. This holistic approach ensures that both the individual and their loved ones feel supported, informed, and cared for throughout the process.</p>
+									</dd>
+									<dt>Logistical Support</dt>
+									<dd>
+										<p>This option provides essential logistical support to help individuals and families navigate end-of-life arrangements with clarity and ease. This includes exploring burial options, coordinating logistics, and offering guidance on what steps to take when a loved one passes. Doulas also assist with preplanning, much like a funeral home, by helping individuals document their wishes, choose service providers, and ensure that advanced directives are in place. By addressing these details in advance, families can focus on being present with their loved ones rather than worrying about logistical challenges.</p>
 									</dd>
 								</dl>
 
@@ -69,45 +71,25 @@
 							<thead>
 								<tr>
 									<th>Service</th>
-									<th>Description</th>
 									<th>Price</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td>One</td>
-									<td>Ante turpis integer aliquet.</td>
-									<td>1000.00</td>
+									<td>Graceful Transitioning Consultation</td>
+									<td>$250 for 2 sessions</td>
 								</tr>
 								<tr>
-									<td>Two</td>
-									<td>Vis ac commodo adipiscing arcu.</td>
-									<td>500.00</td>
+									<td>End-of-Life Doula Care</td>
+									<td>$70 per hour</td>
 								</tr>
 								<tr>
-									<td>Three</td>
-									<td> Morbi faucibus arcu accumsan.</td>
-									<td>200.00</td>
+									<td>Family Doula Care</td>
+									<td>$70 per hour</td>
 								</tr>
 								<tr>
-									<td>Four</td>
-									<td>Vitae integer tempus.</td>
-									<td>2000.00</td>
-								</tr>
-								<tr>
-									<td>Five</td>
-									<td>Ante turpis integer aliquet.</td>
-									<td>2500.00</td>
-								</tr>
-								<tr>
-									<td>Six</td>
-									<td>Ante turpis integer aliquet.</td>
-									<td>500.00</td>
-								</tr>
-								<tr>
-									<td>Seven</td>
-									<td>Vis ac commodo adipiscing arcu.</td>
-									<td>1500.00</td>
+									<td>Logistical Support</td>
+									<td>$70 per hour</td>
 								</tr>
 							</tbody>
 						</table>
@@ -120,11 +102,10 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; End of Life Guides Marquette 2024. | Images by <a href="https://unsplash.com/">Unsplash</a>.</p>
+						<p class="copyright">&copy; Graceful Transitioning 2025 | Developed by <a href="https://www.annairishburnett.com" target="_blank">Anna Irish Burnett</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</footer>
 
