updated copy, increased font-weight to 400 for better accessibility, and deleted unused images

--- a/about.html
+++ b/about.html
@@ -4,12 +4,26 @@
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Graceful Transitioning: About</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Favicons -->
+		<link href="images/favicon.webp" rel="icon">
+
+		<meta name="description" content="Graceful Transitioning provides compassionate end-of-life care and support to those who are dying and their families.">
+		<meta name="keywords" content="death, doula, death doula, end-of-life, guide, spirituality, hospice, wake, funeral, compassion, care, hospice, marquette, marquette mi, support">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1.0" />	
+
+		<!-- Update URL -->
+		<meta property="og:url" content="https://gracefultransitioning.netlify.app/" />
+		
+		<!-- Update Image below -->
+		<meta property="og:image:url" content="https://gracefultransitioning.netlify.app/images/becca-tapert-8_wjL7l5tik-unsplash.webp"/>
+		<meta property="og:description" content="Graceful Transitioning provides compassionate end-of-life care and support to those who are dying and their families."/>
+
+		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
 	<body class="is-preload">
 
