--- a/resources.html
+++ b/resources.html
@@ -4,12 +4,26 @@
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Graceful Transitioning: Resources</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Favicons -->
+		<link href="images/favicon.webp" rel="icon">
+
+		<meta name="description" content="Graceful Transitioning provides compassionate end-of-life care and support to those who are dying and their families.">
+		<meta name="keywords" content="death, doula, death doula, end-of-life, guide, spirituality, hospice, wake, funeral, compassion, care, hospice, marquette, marquette mi, support">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1.0" />	
+
+		<!-- Update URL -->
+		<meta property="og:url" content="https://gracefultransitioning.netlify.app/" />
+		
+		<!-- Update Image below -->
+		<meta property="og:image:url" content="https://gracefultransitioning.netlify.app/images/becca-tapert-8_wjL7l5tik-unsplash.webp"/>
+		<meta property="og:description" content="Graceful Transitioning provides compassionate end-of-life care and support to those who are dying and their families."/>
+
+		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
 	<body class="is-preload">
 
@@ -43,47 +57,32 @@
 						</header>
 						<span class="image main filtered"><img src="images/helena-lopes-PGnqT0rXWLs-unsplash-cropped.webp" alt="view from behind of four friends with their arms around each other staring out at a sunset over a mountain" /></span>
 						<h3>Additional Support</h3>
-						<p>At the end of your life or the life of a loved one, you may want additional support or services outside of what we provide at End of Life Guides Marquette. A healing massage, a beautiful handcrafted urn for your ashes, or an alternative funeral service for when you are gone. While we cannot provide these services ourselves, we can recommend skilled professionals in the Marquette area who specialize in these areas. Below is a list of some of the providers, businesses, and organizations that we regularly work with and recommend to our clients.</p>
+						<p>At the end of your life or the life of a loved one, you may want additional support or services outside of what we provide at End of Life Guides Marquette: a healing massage, beautiful flowers for your bedside, or a handcrafted urn for your ashes. While we cannot provide these services ourselves, we can recommend skilled professionals in the Marquette area who specialize in these areas. Below is a list of some of the providers, businesses, and organizations that we regularly work with and recommend to our clients.</p>
 									<dl>
 										<dt>Big Lake Body Works</dt>
 										<dd>
 											<p>Our therapists offer a variety of massage services to ensure your treatment is therapeutic, relaxing, and tailored to your specific needs.</p>
-											<p>Learn more on their <a href="https://www.sageandspry.com/">website</a>.</p>
+											<p>Learn more on their <a href="https://www.sageandspry.com/" target="_blank">website</a>.</p>
 										</dd>
-										<dt>Memorial Urns</dt>
+										<dt>Samara Floral Co (Negaunee)</dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-											<p>Learn more on their <a href="#">website</a>.</p>
+											<p>Buying flowers can be overwhelming and intimidating. But don't worry – we're here to help. 
+												We know flowers. Whether it's a small gesture to say "I'm thinking of you" or planning your next extravagant event, we've got you covered. 
+												All our arrangements are expertly crafted at our studio in Negaunee. We work with local growers and grow our own flowers to source the best of what's in season. We take great pride in providing phenomenal customer service, expert advice and long-lasting designs.</p>
+											<p>Learn more on their <a href="https://www.samaraflorals.com/" target="_blank">website</a>.</p>
 										</dd>
-										<dt>Celebrancy & Alternative Funeral Services</dt>
+										<dt>Flower Works (Marquette)</dt>
 										<dd>
-											<ul>
-												<li>
-													<h4>Nancy Irish</h4>
-													<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-													<p>Learn more on their <a href="#">website</a>.</p>
-												</li>
-												<li>
-													<h4>Name Name</h4>
-													<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-													<p>Learn more on their <a href="#">website</a>.</p>
-												</li>
-												<li>
-													<h4>Business/Organization</h4>
-													<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-													<p>Learn more on their <a href="#">website</a>.</p>
-												</li>
-											</ul>
+											<p>Flower Works proudly offers unique, luxury, high-quality flowers and plants at fair prices to our Marquette, Michigan community. To visit Flower Works is to experience happiness and joy through plants and flowers.</p>
+											<p>Whether you are looking to surprise that special someone with a lovingly crafted custom flower arrangement, or you want to take home a plant to love and tend to for years to come, we are here to help. Plants and flowers speak when words simply aren’t enough.</p>
+											<p>Learn more on their <a href="https://flowerworksmqt.com/" target="_blank">website</a>.</p>
 										</dd>
-										<dt>Four</dt>
+										<dt>Ann Russ Ceramics</dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-											<p>Learn more on their <a href="#">website</a>.</p>
-										</dd>
-										<dt>Five</dt>
-										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum blandit adipiscing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis in tenetur aperiam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam esse suscipit quia sed aliquid, nostrum commodi architecto.</p>
-											<p>Learn more on their <a href="#">website</a>.</p>
+											<p>In my studio, I craft ceramic vessels to honor the preciousness of life. Each memorial urn, reliquary, and Spirit bowl is hand-built with care, reflecting life’s sacred transitions. My work is inspired by wonder, gratitude for life’s mysteries, and the quiet beauty of nature.</p>
+											<p>I believe in offering people something handmade with heart and intention—an alternative to mass-produced pieces that lack human touch.</p>
+											<p>If you're looking for something truly meaningful, I’d love to create a special piece with you. Feel free to reach out or explore my gallery - many pieces are available, and if not, I’d be happy to craft something similar in spirit just for you...</p>
+											<p>Learn more on their <a href="https://annruss.com/" target="_blank">website</a>.</p>
 										</dd>
 									</dl>
 					</section>
