updated 'what we do' section text on main page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<!-- Section -->
 					<section id="services" class="main special">
 						<h2><a href="services.html">What We Do</a></h2>
-						<p>A Death Doula is different from Hospice because the focus is on emotional needs and spiritual support, rather than medical needs. We are advocates for the dying, ready to honor their path, hold space for emotions, and provide compassionate companionship and support at the end of life.</p>
+						<p>A Death Doula provides compassionate companionship, emotional support, and spiritual guidance to those at the end of life. Unlike Hospice, which focuses on medical care, our role is centered on non-medical support, ensuring individuals feel heard, valued, and at peace. We create a supportive space for emotions, honor each person's unique journey, and offer comfort during this deeply personal time. </p>
 
 						<!-- Note: If you have an odd number of icons, change the class below to "features odd" -->
 						<ul class="features odd">
